force-app/main/default/objects/Patient__c/fields/Care_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Summary__c</fullName>
    <label>Care Plan Summary</label>
    <type>LongTextArea</type>
</CustomField>