force-app/main/default/objects/Patient__c/fields/Last_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Date__c</fullName>
    <label>Last Interaction Date</label>
    <type>Date</type>
</CustomField>