force-app/main/default/objects/Patient__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Care Management</fullName>
                <default>true</default>
                <label>Care Management</label>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Chronic Care</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>