force-app/main/default/objects/Patient__c/fields/Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flag__c</fullName>
    <label>Risk Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>